--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+@font-face {
+  font-family: 'Peace Sans';
+  src: url('/fonts/PeaceSans-Regular.otf') format('opentype'); /* Specify the format */
+  font-weight:normal;
+  font-style: normal; 
+}
